// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CouponCard Component should renders correctly when addresses are not present 1`] = `
<View>
  <ErrorMessage
    bagPage={false}
    error=""
    fontSize=""
    fontWeight=""
  />
  <Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(View)>
          <Styled(View)>
            <Styled(BodyCopy)
              accessibilityText=""
              color="white"
              data-locator="available_PublicValidityLbl"
              dataLocator=""
              fontFamily="secondary"
              fontSize="fs12"
              fontWeight="semibold"
              margin={null}
              numberOfLines={null}
              textDecoration={null}
            />
          </Styled(View)>
        </Styled(View)>
        <Styled(View)>
          <Styled(BodyCopy)
            accessibilityText=""
            color="white"
            data-locator="available_PublicValidityLbl"
            dataLocator=""
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="semibold"
            margin={null}
            numberOfLines={null}
            textDecoration={null}
          />
        </Styled(View)>
      </Styled(View)>
      <Styled(View)>
        <Styled(View)>
          <Styled(View)>
            <Styled(Styled(Text))>
              $10 OFF On $50
            </Styled(Styled(Text))>
            <View>
              <Styled(Styled(Text))>
                <Styled(BodyCopy)
                  accessibilityText=""
                  data-locator="coupon_available_cartUseByValidity"
                  dataLocator=""
                  margin={null}
                  numberOfLines={null}
                  text="Use by 8/10/19"
                  textDecoration={null}
                />
              </Styled(Styled(Text))>
            </View>
            <Styled(View)>
              <Styled(Anchor)
                accessibilityLabel=""
                anchorVariation="primary"
                colorName={null}
                customStyle={Object {}}
                dataLocator=""
                fontFamily="secondary"
                fontSizeVariation="small"
                locator=""
                margins={null}
                noLink={true}
                onPress={[Function]}
                text=""
                to="/#"
                underline={true}
                visible={false}
              />
            </Styled(View)>
          </Styled(View)>
          <Styled(View)>
            <Styled(CustomButton)
              active={false}
              buttonVariation="fixed-width"
              color=""
              customStyle={Object {}}
              customTextStyle={null}
              data-locator=""
              disableButton={false}
              fill="DARK"
              fullWidth=""
              iconColor="gray.800"
              iconName="chevron-down"
              iconSize="fs12"
              locator=""
              navigation={Object {}}
              onPress={[Function]}
              selected={false}
              selectedIcon="chevron-up"
              showIcon={false}
              text="APPLY"
              theme={Object {}}
              type="submit"
              url=""
            />
          </Styled(View)>
        </Styled(View)>
      </Styled(View)>
    </Styled(View)>
  </Styled(View)>
</View>
`;

exports[`CouponCard Component should renders correctly when error present 1`] = `
<Styled(View)>
  <ErrorMessage
    error="error"
  />
  <Styled(View)>
    <Styled(View)>
      <Styled(View)>
        <Styled(View)>
          <Styled(View)>
            <Styled(BodyCopy)
              color="white"
              data-locator="available_PublicValidityLbl"
              fontFamily="secondary"
              fontSize="fs12"
              fontWeight="semibold"
              locator=""
              text=""
            />
          </Styled(View)>
        </Styled(View)>
        <Styled(View)>
          <Styled(BodyCopy)
            color="white"
            data-locator="available_PublicValidityLbl"
            fontFamily="secondary"
            fontSize="fs12"
            fontWeight="semibold"
            locator=""
            text=""
          />
        </Styled(View)>
      </Styled(View)>
      <Styled(View)>
        <Styled(View)>
          <Styled(View)>
            <Styled(Styled(Text))>
              $10 OFF On $50
            </Styled(Styled(Text))>
            <Styled(View)>
              <Styled(Styled(Text))>
                <Styled(BodyCopy)
                  data-locator="coupon_available_cartUseByValidity"
                  locator=""
                  text="Use by 8/10/19"
                />
              </Styled(Styled(Text))>
            </Styled(View)>
            <Styled(View)>
              <Styled(Anchor)
                anchorVariation="primary"
                customStyle={Object {}}
                data-locator=""
                fontFamily="secondary"
                fontSizeVariation="small"
                locator=""
                noLink={true}
                onPress={[Function]}
                text=""
                to="/#"
                underline={true}
                visible={false}
              />
            </Styled(View)>
          </Styled(View)>
          <Styled(View)>
            <Styled(CustomButton)
              buttonVariation="variable-width"
              color="#fff"
              customStyle={Object {}}
              data-locator=""
              disableButton={false}
              fill="BLACK"
              fullWidth=""
              locator=""
              onPress={[Function]}
              text="APPLY"
              type="submit"
              url=""
            />
          </Styled(View)>
        </Styled(View)>
      </Styled(View)>
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;
